Introduce the concept of competition dances

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -620,6 +620,7 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="App_Code\SmartLink.cshtml" />
+    <Content Include="App_Code\CategoryHelpers.cshtml" />
     <None Include="Properties\PublishProfiles\m4d.pubxml" />
     <Content Include="Icon.png" />
     <Content Include="MvcDiagnostics.aspx" />
@@ -834,6 +835,10 @@
     <Content Include="Views\Home\Home.cshtml" />
     <Content Include="Views\Admin\AdminStatus.cshtml" />
     <Content Include="Views\Shared\_TagCloud.cshtml" />
+    <Content Include="Views\Dance\InternationalLatin.cshtml" />
+    <Content Include="Views\Dance\InternationalStandard.cshtml" />
+    <Content Include="Views\Dance\AmericanRhythm.cshtml" />
+    <Content Include="Views\Dance\Category.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
