--- a/DanceCalc/m4dModels/m4dModels.csproj
+++ b/DanceCalc/m4dModels/m4dModels.csproj
@@ -77,6 +77,7 @@
     <Compile Include="ApplicationUser.cs" />
     <Compile Include="ContactStatus.cs" />
     <Compile Include="CountryCodes.cs" />
+    <Compile Include="DanceCategory.cs" />
     <Compile Include="DanceMerge.cs" />
     <Compile Include="DanceMusicService.cs" />
     <Compile Include="DanceRatingDelta.cs" />
