--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -624,6 +624,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="App_Code\SmartLink.cshtml" />
     <Content Include="App_Code\DanceHelper.cshtml" />
+    <Content Include="App_Code\UserHelper.cshtml" />
     <None Include="Properties\PublishProfiles\m4d.pubxml" />
     <Content Include="Icon.png" />
     <Content Include="MvcDiagnostics.aspx" />
