--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -840,6 +840,7 @@
     <Content Include="Views\Admin\AdminStatus.cshtml" />
     <Content Include="Views\Shared\_TagCloud.cshtml" />
     <Content Include="Views\Dance\Category.cshtml" />
+    <Content Include="Views\Admin\FileResults.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
