--- a/DanceCalc/m4dModels/m4dModels.csproj
+++ b/DanceCalc/m4dModels/m4dModels.csproj
@@ -90,6 +90,7 @@
     <Compile Include="LocalMerger.cs" />
     <Compile Include="MergeCluster.cs" />
     <Compile Include="MusicServiceStub.cs" />
+    <Compile Include="PurchaseRegion.cs" />
     <Compile Include="PurchaseType.cs" />
     <Compile Include="QuickTimer.cs" />
     <Compile Include="ServiceType.cs" />
