--- a/DanceCalc/m4d/packages.config
+++ b/DanceCalc/m4d/packages.config
@@ -2,34 +2,38 @@
 <packages>
   <package id="AjaxMin" version="5.14.5506.26202" targetFramework="net45" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
-  <package id="bootstrap" version="3.3.4" targetFramework="net45" />
-  <package id="BundleTransformer.Core" version="1.9.43" targetFramework="net45" />
-  <package id="BundleTransformer.Less" version="1.9.46" targetFramework="net45" />
-  <package id="BundleTransformer.MicrosoftAjax" version="1.9.43" targetFramework="net45" />
+  <package id="bootstrap" version="3.3.5" targetFramework="net45" />
+  <package id="BundleTransformer.Core" version="1.9.69" targetFramework="net45" />
+  <package id="BundleTransformer.Less" version="1.9.69" targetFramework="net45" />
+  <package id="BundleTransformer.MicrosoftAjax" version="1.9.52" targetFramework="net45" />
   <package id="dotNETSpotifyWebAPI" version="1.0.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Glimpse" version="1.8.6" targetFramework="net45" />
+  <package id="glimpse-knockout" version="0.1.5" targetFramework="net45" />
   <package id="Glimpse.Ado" version="1.7.3" targetFramework="net45" />
   <package id="Glimpse.AspNet" version="1.9.2" targetFramework="net45" />
   <package id="Glimpse.EF6" version="1.6.5" targetFramework="net45" />
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net45" />
-  <package id="glimpse-knockout" version="0.1.5" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
   <package id="JavaScriptEngineSwitcher.Core" version="1.2.4" targetFramework="net45" />
-  <package id="JavaScriptEngineSwitcher.Msie" version="1.2.6" targetFramework="net45" />
+  <package id="JavaScriptEngineSwitcher.Msie" version="1.2.11" targetFramework="net45" />
   <package id="jQuery" version="2.1.4" targetFramework="net45" />
-  <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
+  <package id="jQuery.Validation" version="1.14.0" targetFramework="net45" />
   <package id="Knockout.Mapping" version="2.4.0" targetFramework="net45" />
   <package id="knockoutjs" version="3.3.0" targetFramework="net45" />
   <package id="MarkdownDeep.Full" version="1.5" targetFramework="net45" />
-  <package id="Microsoft.ApplicationInsights" version="0.14.0-build20632" targetFramework="net45" />
-  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="0.14.0-build08008" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights" version="1.2.0" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.0" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="1.2.1" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="1.2.1" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.PerformanceCollector" version="0.14.0-build20632" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.RuntimeTelemetry" version="0.14.0-build20632" targetFramework="net45" />
-  <package id="Microsoft.ApplicationInsights.Web" version="0.14.0-build20632" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.Web" version="1.2.1" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="1.2.1" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="1.2.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
@@ -41,7 +45,7 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
-  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.16-beta" targetFramework="net45" />
+  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.25" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
@@ -55,17 +59,17 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
-  <package id="MsieJavaScriptEngine" version="1.5.3" targetFramework="net45" />
+  <package id="MsieJavaScriptEngine" version="1.5.6" targetFramework="net45" />
   <package id="MvcDiagnostics" version="5.2.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="Owin.Security.Providers" version="1.20" targetFramework="net45" />
+  <package id="Owin.Security.Providers" version="1.24" targetFramework="net45" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="Sendgrid" version="6.1.0" targetFramework="net45" />
   <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="3.0.1.1" targetFramework="net45" />
-  <package id="Twitter.Bootstrap.Less" version="3.3.2" targetFramework="net45" />
+  <package id="Twitter.Bootstrap.Less" version="3.3.5" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
