Initial attempt at using NHtmlUnit for scraping

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -560,7 +560,9 @@
     <Compile Include="Scrapers\DanceForum.cs" />
     <Compile Include="Scrapers\DanceScraper.cs" />
     <Compile Include="Scrapers\DWTS.cs" />
+    <Compile Include="Scrapers\NHtmlDanceScraper.cs" />
     <Compile Include="Scrapers\WeddingDanceWorkshop.cs" />
+    <Compile Include="Scrapers\***REMOVED***.cs" />
     <Compile Include="Service References\AWSReference\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
