--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -95,6 +95,9 @@ Sample binding in application.config for iisexpress
       <rules>
         <rule name="Convert to lower case" stopProcessing="true">
           <match url=".*[A-Z].*" ignoreCase="false" />
+          <conditions>
+            <add input="{REQUEST_URI}" negate="true" pattern="/api/" />
+          </conditions>
           <action type="Redirect" url="{ToLower:{R:0}}" redirectType="Permanent" />
         </rule>
         <!--<rule name="Remove trailing slash" stopProcessing="true">
