Quick template for pulling out static tempo pages

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -885,6 +885,7 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+    <Content Include="static-tempi.html" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
