--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -821,6 +821,7 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\showdance.js" />
     <Content Include="Scripts\SongIndex.js" />
+    <Content Include="Scripts\tagchooser.js" />
     <Content Include="Scripts\TagCloud.js" />
     <Content Include="Scripts\Tempi.js" />
     <Content Include="Scripts\undo.js" />
