--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -994,6 +994,13 @@
     <Content Include="Views\Admin\FileResults.cshtml" />
     <Content Include="Views\Manage\Settings.cshtml" />
     <Content Include="Views\Manage\UserProfile.cshtml" />
+    <Content Include="Views\Admin\Tags.cshtml" />
+    <Content Include="Views\Admin\Logging.cshtml" />
+    <Content Include="Views\Admin\CleanupTasks.cshtml" />
+    <Content Include="Views\Admin\InitializationTasks.cshtml" />
+    <Content Include="Views\Admin\ScrapingModifier.cshtml" />
+    <None Include="Views\Admin\Tracing.cshtml" />
+    <Content Include="Views\Admin\UploadBackup.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
