Get some more refactoring of admin pages
Merge Tracing and Loggin into Diagnostics
Merge Cleanup and Initialization into Initialization
A bit of reformatting (including removing the redundant header)
Added in start time and up time to diagnostics page
Quick refactor to list of specific songs to be updated for purchase info (should consider doing this for all update tasks)

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -995,11 +995,9 @@
     <Content Include="Views\Manage\Settings.cshtml" />
     <Content Include="Views\Manage\UserProfile.cshtml" />
     <Content Include="Views\Admin\Tags.cshtml" />
-    <Content Include="Views\Admin\Logging.cshtml" />
-    <Content Include="Views\Admin\CleanupTasks.cshtml" />
+    <Content Include="Views\Admin\Diagnostics.cshtml" />
     <Content Include="Views\Admin\InitializationTasks.cshtml" />
-    <Content Include="Views\Admin\ScrapingModifier.cshtml" />
-    <None Include="Views\Admin\Tracing.cshtml" />
+    <Content Include="Views\Admin\Scraping.cshtml" />
     <Content Include="Views\Admin\UploadBackup.cshtml" />
     <Content Include="Views\Dance\BallroomCompetitionCategories.cshtml" />
     <None Include="Web.m4d.config">
