Scrape wedding wire catlog for relevent types

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -442,6 +442,7 @@
     <Compile Include="Scrapers\DanceScraper.cs" />
     <Compile Include="Scrapers\DWTS.cs" />
     <Compile Include="Scrapers\WeddingDanceWorkshop.cs" />
+    <Compile Include="Scrapers\***REMOVED***.cs" />
     <Compile Include="Service References\AWSReference\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
