Added a wedding dance page and linked it to the top menu.  Also added it to the site map and the may dances index page.
On a slightly different vein, I cleaned up some more register/signup remapings and put a sign up call to action on both the ballroom and the wedding music pages, as I am planning on making them the landing pages for paid searches as soon as I get back.

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -880,6 +880,7 @@
     <Content Include="Views\Admin\UploadBackup.cshtml" />
     <Content Include="Views\Home\FAQ.cshtml" />
     <Content Include="Views\Dance\BallroomCompetitionCategories.cshtml" />
+    <Content Include="Views\Dance\weddingdancemusic.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
