--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -764,6 +764,7 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+    <Content Include="spotify.html" />
     <Content Include="static-tempi.html" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
