Create a UserFilter class that will allow for more sophisticated user filtering and write tests against it. Enable reverve filtering on user (all songs X hasn't touched) as well as filtering and reverse filtering on Like and Hate. Fix a bug in the LIke.Hate column (must be nullable). Get all the unit tests working again - some had been broken by recent checkings.

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -438,6 +438,10 @@
     <Compile Include="Migrations\201511252344462_Timestamps.Designer.cs">
       <DependentUpon>201511252344462_Timestamps.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201512030037597_LikeFix.cs" />
+    <Compile Include="Migrations\201512030037597_LikeFix.Designer.cs">
+      <DependentUpon>201512030037597_LikeFix.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Context\DanceMusicConfiguration.cs" />
     <Compile Include="Context\DanceMusicContext.cs" />
@@ -966,6 +970,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201511252344462_Timestamps.resx">
       <DependentUpon>201511252344462_Timestamps.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512030037597_LikeFix.resx">
+      <DependentUpon>201512030037597_LikeFix.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
