--- a/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
+++ b/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
@@ -97,6 +97,7 @@
     <Compile Include="EditTests.cs" />
     <Compile Include="LogTests.cs" />
     <Compile Include="DanceQueryTest.cs" />
+    <Compile Include="UserQueryTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DanceLib\DanceLib.csproj">
