--- a/DanceCalc/m4dModels/m4dModels.csproj
+++ b/DanceCalc/m4dModels/m4dModels.csproj
@@ -132,6 +132,7 @@
     <Compile Include="TrackNumber.cs" />
     <Compile Include="UndoAction.cs" />
     <Compile Include="UndoResult.cs" />
+    <Compile Include="UserQuery.cs" />
     <Compile Include="UserTag.cs" />
     <Compile Include="XboxService.cs" />
   </ItemGroup>
