Show like/hate in songlist/search results Icon cycles through like/dislike/no-vote without refreshing the page (ajax back to server). If the user isn't signed in the icons all show up as empty-hearts and link to signin I also improved the returnUrl feature to handle the local case correctlly, so an unsigned in user should be able to cklick a heart, sign in and land back on the same page they started from.

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -339,6 +339,7 @@
   <ItemGroup>
     <Compile Include="APIControllers\ServiceTrackController.cs" />
     <Compile Include="APIControllers\TagSuggestionController.cs" />
+    <Compile Include="APIControllers\UpdateLikeController.cs" />
     <Compile Include="APIControllers\UpdateRatingsController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -469,6 +470,7 @@
     <Compile Include="Utilities\XboxAuthentication.cs" />
     <Compile Include="ViewModels\AlbumViewModel.cs" />
     <Compile Include="ViewModels\DanceClass.cs" />
+    <Compile Include="ViewModels\LikeView.cs" />
     <Compile Include="ViewModels\ManageViewModels.cs" />
     <Compile Include="ViewModels\ServiceSearchResults.cs" />
     <Compile Include="ViewModels\AccountViewModels.cs" />
