Tell Baiduspider to take a hike (actually just filter on the user agent in doindex and refuse to hit the DB).

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -894,6 +894,7 @@
     <Content Include="Views\Dance\weddingdancemusic.cshtml" />
     <Content Include="Views\Song\AdvancedSearchForm.cshtml" />
     <Content Include="Views\Account\_WhySignUp.cshtml" />
+    <Content Include="Views\Shared\BotWarning.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
