Refactored the spider detector into a static class that I can use from both MVC and API controllers.  Disallow any spiders calling PurchaseInfo controller.

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -460,6 +460,7 @@
     </Compile>
     <Compile Include="Startup.cs" />
     <Compile Include="Utilities\GenericPrincipalExtensions.cs" />
+    <Compile Include="Utilities\SpiderManager.cs" />
     <Compile Include="Utilities\SpotAuthentication.cs" />
     <Compile Include="Utilities\AdmAuthentication.cs" />
     <Compile Include="Utilities\AWSFetcher.cs" />
