Create bot-friendly stubs for search results (more attemtp to remove load from the SQL database).

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -900,6 +900,7 @@
     <Content Include="Views\Account\_WhySignUp.cshtml" />
     <Content Include="Views\Shared\BotWarning.cshtml" />
     <Content Include="Views\Shared\_botreport.cshtml" />
+    <Content Include="Views\Song\BotFilter.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
