Implemented liking/disliking dancing a particular style of dance to a song directly from anwhere that we're listing songs of a single dance style.

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -352,6 +352,7 @@
     <Compile Include="Controllers\ApplicationUsersController.cs" />
     <Compile Include="APIControllers\DanceController.cs" />
     <Compile Include="APIControllers\DMApiController.cs" />
+    <Compile Include="Controllers\ContentController.cs" />
     <Compile Include="Controllers\DanceController.cs" />
     <Compile Include="Controllers\DMController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
@@ -497,6 +498,9 @@
     <Content Include="Content\chosen-sprite.png" />
     <Content Include="Content\chosen.css" />
     <Content Include="Content\dance-50.png" />
+    <Content Include="Content\dance-broken-icon.png" />
+    <Content Include="Content\dance-outline-icon.png" />
+    <Content Include="Content\dance-icon.png" />
     <Content Include="Content\dance-tempo-50.png" />
     <Content Include="Content\echonest-lg.gif" />
     <Content Include="Content\echonest.png" />
